syntax = "proto3";

package server;

service Grpc {
    rpc Ping (PingRequest) returns (PingResponse);
}

message PingRequest {
    optional string client_id = 1;
}

message PingResponse {
    string client_id = 1;
    optional string client_name = 2;    
}




